test/fixtures/hardcoded-secrets/negative/jwt.ts
export const SESSION_TOKEN = process.env.SESSION_TOKEN;
